# pensieve

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: FindJsoncpp.cmake  FindMicrohttpd.cmake  psvPackaging.cmake
source/: CMakeLists.txt  psvConfigure.hpp.in
source/gui/: CMakeLists.txt  main.cpp  psvLogDialog.cpp  psvLogDialog.hpp  psvLogDialog.ui  psvPensieveModel.cpp  psvPensieveModel.hpp  psvPensieveWidget.cpp  psvPensieveWidget.hpp  psvPensieveWidget.ui  psvPensieveWindow.cpp  psvPensieveWindow.hpp  psvPensieveWindow.ui  psvSettingsDialog.cpp  psvSettingsDialog.hpp  psvSettingsDialog.ui  psvThoughtWidget.cpp  psvThoughtWidget.hpp  psvThoughtWidget.ui
source/gui/res/: resources.qrc
source/server/: CMakeLists.txt  main.cpp  psvServer.cpp  psvServer.hpp
